<resources>
    <string name="app_name">DocumentManager-App</string>
    <string name="sophos_logo">Sophos Solutions Logo</string>
    <string name="login_message">Ingresa tus datos para \n acceder</string>
    <string name="Email">Correo Electronico</string>
    <string name="Password">Contraseña</string>
    <string name="Login">Iniciar sesion</string>
    <string name="Finger_print">Ingresar con huella</string>
    <string name="sophos_home_description">Imagen de bienvenida de Sophos</string>
    <string name="welcome_text">Bienvenido</string>
    <string name="options_text">Estas son las opciones \n que tenemos para ti</string>
    <string name="Entry">Ingresar</string>
    <string name="send_documents">Enviar documentos</string>
    <string name="send_docs_text">Envio de documentación</string>
    <string name="show_documents">Ver documentos</string>
    <string name="office">Oficinas</string>
    <string name="logout">Cerrar sesion</string>
    <string name="document">Documento</string>
    <string name="documents">Documentos</string>
    <string name="detail_document">Detalles de la imagen del Documento</string>
    <string name="API_KEY">AIzaSyBt0wSRhMPQN0m4XAmP5KuU9-38WoBbt_8</string>
    <string name="description">Descripción</string>
    <string name="type_document">Tipo de Identificacion</string>
    <string name="document_number">Numero de documento</string>
    <string name="names">Nombres</string>
    <string name="last_names">Apellidos</string>
    <string name="city">Ciudad</string>
    <string name="send">Enviar</string>

</resources>