<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".ui.view.SendDocumentsView">

    <!-- TODO: Update blank fragment layout -->
    <include
        android:id="@+id/toolbar_container"
        layout="@layout/topbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:paddingStart="25sp"
        android:text="@string/send_docs_text"
        android:textColor="@color/title_text_color"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar_container"
        tools:ignore="RtlSymmetry" />

    <ImageView
        android:id="@+id/iv_add_image"
        android:layout_width="130dp"
        android:layout_height="120dp"
        android:layout_marginTop="20dp"
        android:scaleType="fitXY"

        app:layout_constraintBottom_toTopOf="@id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="30dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@id/buttons_container"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_add_image">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/description"
            android:textColorHint="@color/input_text_color"
            app:hintTextColor="@color/input_text_color">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/it_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/background" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/it_document_type"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/type_document"
            android:textColorHint="@color/input_text_color"
            app:boxStrokeWidth="0dp"
            app:hintTextColor="@color/input_text_color">

            <AutoCompleteTextView
                android:id="@+id/dropdown_menu_document"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/document_number"
            android:textColorHint="@color/input_text_color"
            app:hintTextColor="@color/input_text_color"
            app:startIconDrawable="@drawable/credential"
            app:startIconTint="@color/input_text_color">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/it_document_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/background" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/names"
            android:textColorHint="@color/input_text_color"
            app:hintTextColor="@color/input_text_color">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/it_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/background" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/last_names"
            android:textColorHint="@color/input_text_color"
            app:hintTextColor="@color/input_text_color">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/it_lastname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/background" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Email"
            android:textColorHint="@color/input_text_color"
            app:hintTextColor="@color/input_text_color">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/it_Email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/background" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/it_cities"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/city"
            android:textColorHint="@color/input_text_color"
            app:boxStrokeWidth="0dp"
            app:hintTextColor="@color/input_text_color">

            <AutoCompleteTextView
                android:id="@+id/dropdown_menu_cities"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/buttons_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linearLayout">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_add_document"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/first_card_color"
            android:paddingTop="10dp"
            android:paddingEnd="30dp"
            android:paddingBottom="10dp"
            android:text="@string/document"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:cornerRadius="10dp"
            app:icon="@drawable/cloud"
            app:iconTint="@color/white"
            tools:ignore="RtlSymmetry" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_submit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/first_card_color"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:text="@string/send"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            app:cornerRadius="10dp"
            app:layout_constraintVertical_bias="0.729" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>