<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/view_home"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".ui.view.HomeView">

    <include
        android:id="@+id/toolbar_container"
        layout="@layout/topbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/banner"
        android:layout_width="match_parent"
        android:layout_height="280dp"
        app:layout_constraintBottom_toTopOf="@id/actions"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar_container">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/sophos_home"
            android:contentDescription="@string/sophos_home_description"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_editor_absoluteX="0dp" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:letterSpacing="0.05"
            android:text="@string/welcome_text"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/imageView"
            app:layout_constraintHorizontal_bias="0.065"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.133" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/options_text"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/imageView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.164"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/imageView"
            app:layout_constraintVertical_bias="0.655" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:id="@+id/actions"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/banner"
        app:layout_constraintVertical_bias="0.0">

        <com.google.android.material.card.MaterialCardView
            style="@style/menuCard"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:backgroundTint="@color/first_card_fade_color"
            app:strokeColor="@color/first_card_color">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableTint="@color/first_card_text"
                    android:text="@string/send_documents"
                    android:textColor="@color/first_card_text"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:drawableStartCompat="@drawable/send_docs"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.107"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.175" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_send_documents"
                    style="@style/menuButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/first_card_btn_color"
                    android:drawableEnd="@drawable/arrow_right"
                    android:drawableTint="@color/first_card_text"
                    android:text="@string/Entry"
                    android:textColor="@color/first_card_text"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.936"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.741"
                    app:strokeColor="@color/first_card_color" />
            </androidx.constraintlayout.widget.ConstraintLayout>


        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            style="@style/menuCard"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:backgroundTint="@color/second_card_fade_color"
            app:strokeColor="@color/second_card_color">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableTint="@color/second_card_text"
                    android:text="@string/show_documents"
                    android:textColor="@color/second_card_text"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:drawableStartCompat="@drawable/show_docs"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.093"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.192" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_see_documents"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/second_card_btn_color"
                    android:drawableEnd="@drawable/arrow_right"
                    android:drawableTint="@color/second_card_text"
                    android:paddingStart="35dp"
                    android:paddingEnd="20dp"
                    android:text="@string/Entry"
                    android:textAllCaps="false"
                    android:textColor="@color/second_card_text"
                    android:textStyle="bold"
                    app:cornerRadius="10dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.936"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.788"
                    app:strokeColor="@color/second_card_color"
                    app:strokeWidth="2dp" />
            </androidx.constraintlayout.widget.ConstraintLayout>


        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            style="@style/menuCard"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:backgroundTint="@color/third_card_fade_color"
            app:strokeColor="@color/third_card_color">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableTint="@color/third_card_text"
                    android:text="@string/office"
                    android:textColor="@color/third_card_text"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:drawableStartCompat="@drawable/map"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.058"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.164" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_office"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/third_card_btn_color"
                    android:drawableEnd="@drawable/arrow_right"
                    android:drawableTint="@color/third_card_text"
                    android:paddingStart="35dp"
                    android:paddingEnd="20dp"
                    android:text="@string/Entry"
                    android:textAllCaps="false"
                    android:textColor="@color/third_card_text"
                    android:textStyle="bold"
                    app:cornerRadius="10dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.936"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.741"
                    app:strokeColor="@color/third_card_color"
                    app:strokeWidth="2dp" />
            </androidx.constraintlayout.widget.ConstraintLayout>


        </com.google.android.material.card.MaterialCardView>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>